# Lakehouse-Course

./: .gitignore  CHANGES_MADE.md  DAY3_GUIDE.md  DREMIO_SUPERSET_FIX.md  FINAL_SETUP_READY.md  LAKEHOUSE_FROM_SCRATCH.md  README.md  README_COURSE_READY.md  ROADMAP.md  STUDENT_SETUP_GUIDE.md  SUPERSET_ALTERNATIVE.md  SUPERSET_CONNECTION_WORKING.md  SUPERSET_DEMO_SETUP.md  convert_json_to_jsonl.py  docker-compose.yml  pyproject.toml  requirements.txt  superset-init.sh
agent/: .env.example  .gitignore  app.py  chainlit.md  requirements.txt
course_materials/: AIRBYTE_SETUP.md  DEMO_SCRIPT.md  NAMESPACE_MAPPING.md  RECOVERY_PLAN.md  SUPERSET_ORCHESTRATION.md  dremio_queries.sql
data/: chargenet_charging_sessions.jsonl  chargenet_stations.jsonl  ecoride_product_reviews.jsonl  test_bad_customers.csv  vehicle_health_data.jsonl
docker/agent/: Dockerfile
docker/dagster/: Dockerfile
docker/jupyterlab/: Dockerfile
docker/superset/: Dockerfile  superset_config.py
docs/: DEMO_QUERIES_AND_DASHBOARDS.md
ingestion/bronze/: chargenet_ingest.py  documents_ingest.py  ecoride_ingest.py  vehicle_health_ingest.py
ingestion/utils/: spark_utils.py
notebooks/: customer_segmentation.ipynb  customer_segments.csv  product_reviews_analysis.ipynb  segment_summary.csv
orchestration/: setup.py
orchestration/orchestration/: assets.py  definitions.py
simple_ingestion/: Dockerfile  ingest.py
soda/: configuration.yml  configuration_gold.yml  configuration_silver.yml
soda/checks/: demo_checks.yml  failing_example_checks.yml  gold_checks.yml  silver_checks.yml
(+20 files in other folders)
