[project]
name = "lakehouse"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.5",
    "dagster>=1.12.4",
    "dagster-cloud>=1.12.4",
    "dagster-dbt>=0.28.4",
    "dagster-webserver>=1.12.4",
    "dbt-dremio>=1.10.0",
    "pyspark==3.5.1",
    "python-dotenv>=1.2.1",
]
